<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF2121"
    android:orientation="vertical"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/img_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="bottom"
                android:paddingBottom="6dip"
                android:text="@string/app_version"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#dddddd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="6dip"
            android:text="@string/app_desc"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:padding="12dip" >

        <TextView
            android:id="@+id/copyright_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/copyright_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product"
            android:textSize="11sp" />
    </LinearLayout>

</RelativeLayout>