<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1D1D1D" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip" >

        <EditText
            android:id="@+id/editIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_ipaddr"
            android:inputType="numberDecimal"
            android:layout_marginBottom="10dip" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_port"
            android:inputType="numberDecimal"
            android:layout_marginBottom="10dip" />

        <Button
            android:id="@+id/btnConnect"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/app_connect" />

        <Button
            android:id="@+id/btnAbout"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_about"
            android:layout_marginBottom="10dip" />

    </LinearLayout>

</ScrollView>